<resources>
    <string name="facebook_app_id">608148720133382</string>
    <string name="fb_login_protocol_scheme">fb608148720133382</string>
    <string name="sign_ingoogleaccount">Sign In With Google</string>
    <string name="app_name">mCommerce App</string>
    <string name="price">PRICE :</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="back">Please press back again to exit</string>
    <string name="quantity_messge">Please enter a number greater than 0</string>
    <string name="quantity">Please enter quantity</string>

    <string name="nointernet">Please connect to internet and try again</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourite">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="account">My Account</string>
    <string name="manufacturer">Manufacturers</string>
    <string name="apply">Apply</string>
    <string name="reset">RESET</string>
    <string name="home_second">Home Second</string>
    <string name="wentwrong">Something went wrong ..</string>


    <string name="google_maps_key">AIzaSyACEdrg8VTLbxmOWcGGYI8YMsQN-OfdwKE</string>
    <string name="delete">Delete</string>
    <string name="search_hint">Search Here..</string>
    <string name="your_string_here">USE CODE : FASH20<u>underline</u>.</string>
    <string name="browse">Browse Categories</string>
    <string name="bestselling">Best Selling</string>
    <string name="seeall">See all</string>
    <string name="arrival">New Arrivals</string>
    <string name="newee">New</string>
    <string name="filter">Filter</string>
    <string name="newpassword">New Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="showresult">Show Result</string>
    <string name="clearall">Clear All</string>
    <string name="sortby">Sort By</string>
    <string name="filterby">Filter By</string>
    <string name="createaccount">Create Account</string>
    <string name="signin">Sign In</string>
    <string name="mysettings">Settings</string>
    <string name="app_setting">App Settings</string>
    <string name="helpinfo"><![CDATA[Help & Info]]></string>
    <string name="hotline">Hot Line</string>
    <string name="terms">Terms and Conditions</string>
    <string name="privacy"><![CDATA[Privacy & Policy]]></string>
    <string name="detail"><![CDATA[Address & Details]]></string>
    <string name="changepsw">Change Password</string>
    <string name="changepassword">Change my Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="password_desc">Your new password must be at least 6 characters long.</string>
    <string name="savepassword">Save my new  password</string>
    <string name="currentpassword">Current Password</string>
    <string name="accinfo">Account Information</string>
    <string name="addnewAddress"> ADD NEW ADDRESS </string>
    <string name="save"> SAVE </string>
    <string name="fullname">Enter Fullname</string>
    <string name="phoneno">Enter Phone number</string>
    <string name="myaccount">MY ACCOUNT</string>
    <string name="my_details">My Details</string>
    <string name="firstname">First Name</string>
    <string name="typeyourfname">Type your first name</string>
    <string name="lastname">Last Name</string>
    <string name="typeyourlname">Type your last name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="typephonewithcc">Type your country code and phone number</string>
    <string name="streetadd">Street Address</string>
    <string name="typeyourstreetadd">Type our street address</string>
    <string name="district">District</string>
    <string name="typeyourdistrict">Type your district</string>
    <string name="city">City</string>
    <string name="choosecity">Choose your city</string>
    <string name="country">Country</string>
    <string name="choosecountry">Choose your country</string>
    <string name="emailaddresss">Email Address</string>

    <string name="updatemydetails">Update my Details</string>
    <string name="address">Address</string>
    <string name="editadd">Edit Address</string>
    <string name="editdetails">Edit Details</string>
    <string name="postalcode">Postal Code</string>
    <string name="special">Special Price :</string>
    <string name="priceee">Price :</string>
    <string name="internet">Please check your internet connection</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgetpsw">Forget Password ?</string>
    <string name="or">-OR-</string>
    <string name="welcome">Welcome,</string>
    <string name="signincontinue">Sign in to Continue</string>
    <string name="sign_withfb">Sign In With Facebook</string>
    <string name="sign_upgoogleaccount">Sign In With Google</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="signup">SIGN UP</string>
    <string name="createaccounttt">Create An Account</string>

    <string name="vall">Please enter 3 or more characters</string>


    <string name="enterfirstname">Please Enter First Name</string>
    <string name="enterlastname">Please Enter Last Name</string>
    <string name="enteremailaddress">Please Enter Email Address</string>
    <string name="entermobilenumber">Please Enter Mobile Number</string>
    <string name="entercivilid">Please Enter Civil ID</string>
    <string name="enterweight">Please Enter Weight</string>
    <string name="enterheight">Please Enter Height</string>
    <string name="selectoption">Please Select Any Option</string>
    <string name="enteraddress">Please Enter Address</string>
    <string name="enterzip">Please Enter Zip</string>
    <string name="enterdistrict">Please Enter District</string>
    <string name="enterphonenumber">Please Enter Phone Number</string>
    <string name="validemail">Please Enter Valid Email Address</string>
    <string name="validpassword">Password must be at least 8 characters long</string>
    <string name="enterpw">Please Enter Your Password</string>
    <string name="validpassword_validate">Minumum password length should be 8 with uppercase ,lowercase ,Special Characters and digits</string>
    <string name="logout">Logout</string>

    <string name="logoutmessge">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="logout_message">Logged out successfully</string>
    <string name="send">SEND</string>
    <string name="forgetpswww">Forget Password</string>


    <string name="entercurrentpw">Enter current password</string>
    <string name="enternewpw">Enter New password</string>
    <string name="enterconfirmpw">Enter confirm password</string>
    <string name="pwmatch">New Password and Confirm Password should be Match..</string>
    <string name="createadd">Add New Address</string>
    <string name="entercity">Please Enter City</string>
    <string name="entercountry">Please Enter Country</string>
    <string name="enterpostalcode">Please Enter PodtalCode</string>
    <string name="entervalidmobileno">Please enter valid mobile no</string>
    <string name="selectcountry">Select Country</string>
    <string name="selectecountry">Select Country</string>
    <string name="sku">SKU :</string>
    <string name="stock">IN A STOCK</string>
    <string name="addcart">Add to Cart</string>
    <string name="size">Size</string>
    <string name="colour">Colour</string>
    <string name="detailss">Details</string>
    <string name="readmore">Read More</string>
    <string name="productfeature">Product Feature</string>
    <string name="similarproduct">Similar Product</string>
    <string name="easypaymentoption">Easy Payment Options</string>
    <string name="review">Reviews</string>
    <string name="writereview">Write your review</string>
    <string name="viewallreviews">View All Review</string>
    <string name="havedouts">Have doubts regrading this project</string>
    <string name="postque">Post your questions</string>
    <string name="submit">Submit</string>
    <string name="postyour">Post your quotation</string>

    <string name="size_guide">Select Size</string>

    <string name="checkout">Checkout</string>
    <string name="delivery">Delivery</string>
    <string name="payments">Payments</string>
    <string name="next">Next</string>
    <string name="backk">Back</string>
    <string name="nameoncard">Name on Card</string>
    <string name="cardnoo">Card Number</string>
    <string name="expirydate">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="savecard">Save this card details</string>
    <string name="vouchercode">Enter Voucher Code</string>
    <string name="subtotal">Sub Total (3 items)</string>
    <string name="tax">Tax</string>
    <string name="order">Place Your Order</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="orderlist">Order List</string>
    <string name="myorder">My Orders</string>
    <string name="my_orders">My Current Order</string>
    <string name="order_history">My Complete Order</string>
    <string name="itemid">Item ID :</string>
    <string name="orderstatus">Order Status :</string>
    <string name="reorder">Reorder</string>
</resources>
