<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/lv_main_edit"
    tools:context=".Fragment.EditAddressFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:elevation="0dp"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_edit"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:gravity="center"
            android:elevation="0dp"
            app:elevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="6">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2.7" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_edit_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:text="@string/accinfo"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2.2"
                    android:gravity="center|end">


                </LinearLayout>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/lv_progress_changepsw"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/padding10"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/progressbar_ui" />
    </LinearLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_margin="@dimen/padding20"
                app:cardElevation="@dimen/padding15"
                app:cardCornerRadius="@dimen/padding5">


                <LinearLayout
                    android:layout_marginBottom="@dimen/padding15"
                    android:layout_marginTop="@dimen/padding15"
                    android:padding="@dimen/padding15"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                         <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginTop="@dimen/padding15">

                    <TextView
                        android:id="@+id/tv_mydetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:includeFontPadding="false"
                        android:text="@string/my_details"
                        android:padding="@dimen/padding3"
                        android:textColor="@color/black"
                        android:textSize="@dimen/tetx_16"
                        android:textStyle="bold" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_detail_fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColorHint="@color/greey"
                        android:tooltipText="text"
                        android:hint="@string/firstname"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                        <EditText
                            android:id="@+id/et_details_fullname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_detail_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColorHint="@color/greey"
                        android:tooltipText="text"
                        android:hint="@string/lastname"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                        <EditText
                            android:id="@+id/et_details_lastname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_details_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColorHint="@color/greey"
                        android:tooltipText="text"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                        <EditText
                            android:id="@+id/et_deails_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:drawablePadding="@dimen/padding20"
                            android:hint="@string/emailaddresss"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_details_phoneno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColorHint="@color/greey"
                        android:tooltipText="text"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                        <EditText
                            android:id="@+id/et_deails_phoneno"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:drawablePadding="@dimen/padding20"
                            android:hint="@string/phonenumber"
                            android:inputType="phone"
                            android:ems="10"
                            android:maxLength="12"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                             <com.google.android.material.textfield.TextInputLayout
                                 android:id="@+id/layout_details_address"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="10dp"
                                 android:textColorHint="@color/greey"
                                 android:tooltipText="text"
                                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                                 <EditText
                                     android:id="@+id/et_deails_address"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="10dp"
                                     android:drawablePadding="@dimen/padding20"
                                     android:hint="@string/address"
                                     android:inputType="text"
                                     android:textColor="@color/black"
                                     android:textColorHint="@color/black"
                                     android:textSize="16sp" />
                             </com.google.android.material.textfield.TextInputLayout>
                             <com.google.android.material.textfield.TextInputLayout
                                 android:id="@+id/layout_details_city"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="10dp"
                                 android:textColorHint="@color/greey"
                                 android:tooltipText="text"
                                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                                 <EditText
                                     android:id="@+id/et_deails_city"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="10dp"
                                     android:drawablePadding="@dimen/padding20"
                                     android:hint="@string/city"
                                     android:inputType="text"
                                     android:textColor="@color/black"
                                     android:textColorHint="@color/black"
                                     android:textSize="16sp" />
                             </com.google.android.material.textfield.TextInputLayout>

                             <com.google.android.material.textfield.TextInputLayout
                                 android:id="@+id/layout_details_country"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="10dp"
                                 android:textColorHint="@color/greey"
                                 android:tooltipText="text"
                                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                                 <EditText
                                     android:id="@+id/et_deails_country"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="10dp"
                                     android:drawablePadding="@dimen/padding20"
                                     android:hint="@string/country"
                                     android:inputType="text"
                                     android:textColor="@color/black"
                                     android:textColorHint="@color/black"
                                     android:textSize="16sp" />
                             </com.google.android.material.textfield.TextInputLayout>
                             <com.google.android.material.textfield.TextInputLayout
                                 android:id="@+id/layout_details_postalcode"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="10dp"
                                 android:textColorHint="@color/greey"
                                 android:tooltipText="text"
                                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                                 <EditText
                                     android:id="@+id/et_deails_postal"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="10dp"
                                     android:drawablePadding="@dimen/padding20"
                                     android:hint="@string/postalcode"
                                     android:inputType="number"
                                     android:textColor="@color/black"
                                     android:textColorHint="@color/black"
                                     android:textSize="16sp" />
                             </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

            <LinearLayout
                android:id="@+id/lv_edit_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:background="@drawable/rounded_blacl"
                android:gravity="center"
                android:padding="@dimen/padding5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:padding="8dp"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_16"
                    android:textStyle="bold" />

            </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>