<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
   >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_filter"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:gravity="center"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center|start">

                <TextView
                    android:id="@+id/tv_refine_toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/filter"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_20"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center|start">


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.3"
                android:gravity="center|end">

            </LinearLayout>

        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>

    <include
        android:id="@+id/lvnodata_filter"
        layout="@layout/datanotfound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/lv_filter_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/progressbar_ui" />
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/cordinator_main_filter">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="?attr/actionBarSize"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin20"
                android:layout_marginRight="@dimen/margin20"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/lv_sort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin20"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_refine_sort_by"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sortby"
                        android:padding="@dimen/padding5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_18"
                        android:textStyle="bold" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_sort_by"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding5" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lv_filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding30"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_refine_filter_by"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filterby"
                        android:padding="@dimen/padding5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_18"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_filter_by"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding5" />

                </LinearLayout>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:background="@color/white"
            android:gravity="center"
            android:layout_margin="@dimen/margin10"
            android:orientation="horizontal"
            >


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_black_border"
                android:gravity="center"
                android:padding="@dimen/margin10">

                <TextView
                    android:id="@+id/tv_clearall_filter"
                    android:paddingLeft="@dimen/padding10"
                    android:paddingRight="@dimen/padding10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/clearall"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16"
                    android:textStyle="bold" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/lv_showFilterResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_green"
                android:gravity="center"
                android:padding="@dimen/margin10">

                <TextView
                    android:paddingLeft="@dimen/padding10"
                    android:paddingRight="@dimen/padding10"
                    android:id="@+id/tv_show_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/showresult"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_16"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>